[gd_scene load_steps=94 format=2]

[ext_resource path="res://Assets/explosions and impact (extract.me)/impact5/png-sequence/spritesheet_ver1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Huntress 2/Sprites/Character/Idle.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/Ranger.gd" type="Script" id=3]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion10.png" type="Texture" id=4]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion2.png" type="Texture" id=5]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion4.png" type="Texture" id=6]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion11.png" type="Texture" id=7]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion7.png" type="Texture" id=8]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion17.png" type="Texture" id=9]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion16.png" type="Texture" id=10]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion14.png" type="Texture" id=11]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion18.png" type="Texture" id=12]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion19.png" type="Texture" id=13]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion3.png" type="Texture" id=14]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion5.png" type="Texture" id=15]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion8.png" type="Texture" id=16]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion9.png" type="Texture" id=17]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion13.png" type="Texture" id=18]
[ext_resource path="res://Assets/Music/Body_damage/Sword hit another sword 9.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion15.png" type="Texture" id=20]
[ext_resource path="res://Assets/explosions and impact (extract.me)/explosion1/png-sequence/explosion12.png" type="Texture" id=21]
[ext_resource path="res://Assets/Music/Bow/Relasing Bow 3.wav" type="AudioStream" id=22]
[ext_resource path="res://Assets/Huntress 2/Sprites/Character/Get Hit.png" type="Texture" id=23]
[ext_resource path="res://Assets/Huntress 2/Sprites/Character/Death.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Follow_Target.tscn" type="PackedScene" id=25]
[ext_resource path="res://Assets/Huntress 2/Sprites/Character/Run.png" type="Texture" id=26]
[ext_resource path="res://Assets/Huntress 2/Sprites/Character/Attack.png" type="Texture" id=27]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=28]
[ext_resource path="res://Assets/Huntress 2/Sprites/Character/Jump.png" type="Texture" id=29]
[ext_resource path="res://Assets/Music/Super Dialogue Audio Pack v1/Super Dialogue Audio Pack v1/Step 2 - Audio Files/7 - Damage/Male/Sean Lenhart/damage_1_sean.wav" type="AudioStream" id=30]
[ext_resource path="res://Assets/Music/Super Dialogue Audio Pack v1/Super Dialogue Audio Pack v1/Step 2 - Audio Files/8 - Death/Male/Sean Lenhart/death_6_sean.wav" type="AudioStream" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 17.5222 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 378, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 756, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1134, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1512, 0, 378, 378 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 378, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 756, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1134, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1512, 378, 378, 378 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 378, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 756, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1134, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1512, 756, 378, 378 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 378, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 756, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1134, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1512, 1134, 378, 378 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 378, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 756, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1134, 1512, 378, 378 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1512, 1512, 378, 378 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Hit",
"speed": 40.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "New Anim",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 154.325, 17.2116 )

[sub_resource type="Animation" id=29]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0036819 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 5, 5 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_on_attack_start"
}, {
"args": [  ],
"method": "_on_attack_finish"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_arrow"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("Weapon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 22 )
} ],
"times": PoolRealArray( 0.7 )
}

[sub_resource type="Animation" id=30]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 3.36359 ),
"update": 1,
"values": [ ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "remove_from_targetable"
}, {
"args": [  ],
"method": "on_died"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("character_audio")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 31 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=31]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 3.03143 ),
"update": 1,
"values": [ ExtResource( 23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("character_audio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 30 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=32]
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}

[sub_resource type="Animation" id=33]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 29 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=34]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animations:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animations:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.870551 ),
"update": 1,
"values": [ ExtResource( 26 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachine" id=60]
states/Attack/node = SubResource( 35 )
states/Attack/position = Vector2( 343, 487.71 )
states/Die/node = SubResource( 36 )
states/Die/position = Vector2( 982, 261 )
states/Hurt/node = SubResource( 37 )
states/Hurt/position = Vector2( 654, 138 )
states/Idle/node = SubResource( 38 )
states/Idle/position = Vector2( 280, 261 )
states/Jump/node = SubResource( 39 )
states/Jump/position = Vector2( 673.386, 627.537 )
states/Run/node = SubResource( 40 )
states/Run/position = Vector2( 982, 456 )
transitions = [ "Idle", "Hurt", SubResource( 41 ), "Hurt", "Idle", SubResource( 42 ), "Idle", "Die", SubResource( 43 ), "Hurt", "Die", SubResource( 44 ), "Idle", "Run", SubResource( 45 ), "Run", "Idle", SubResource( 46 ), "Hurt", "Run", SubResource( 47 ), "Run", "Hurt", SubResource( 48 ), "Attack", "Hurt", SubResource( 49 ), "Hurt", "Attack", SubResource( 50 ), "Idle", "Attack", SubResource( 51 ), "Run", "Attack", SubResource( 52 ), "Attack", "Idle", SubResource( 53 ), "Attack", "Run", SubResource( 54 ), "Attack", "Die", SubResource( 55 ), "Idle", "Jump", SubResource( 56 ), "Jump", "Idle", SubResource( 57 ), "Run", "Jump", SubResource( 58 ), "Jump", "Run", SubResource( 59 ) ]
start_node = "Idle"
end_node = "Die"
graph_offset = Vector2( 42.386, 90.537 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=61]

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 331.008, 40.9143 )

[node name="Ranger" type="KinematicBody2D" groups=[
"Enemy",
"Ranger",
]]
collision_layer = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Effect" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.707092, -16.2635 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 27 )
animation = "Hit"

[node name="Animations" type="Sprite" parent="."]
texture = ExtResource( 27 )
hframes = 6
region_rect = Rect2( 366, 37, 1, 0 )

[node name="Arrow_Fire_Point" type="Node2D" parent="Animations"]
position = Vector2( 17.9807, -9.2279 )

[node name="Attack_Area" type="Area2D" parent="Animations"]
position = Vector2( 158.392, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animations/Attack_Area"]
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 29 )
anims/Die = SubResource( 30 )
anims/Hurt = SubResource( 31 )
anims/Idle = SubResource( 32 )
anims/Jump = SubResource( 33 )
anims/Run = SubResource( 34 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 60 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 61 )

[node name="Weapon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )

[node name="damage_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
volume_db = 5.0
max_distance = 1000.0

[node name="character_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 30 )
max_distance = 1000.0

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( -3.05176e-05, -1.56164e-05 )
shape = SubResource( 62 )

[node name="Follow_Target" parent="." instance=ExtResource( 25 )]

[node name="HealthBar" parent="." instance=ExtResource( 28 )]
margin_left = -12.6737
margin_top = -21.9839
margin_right = 30.3263
margin_bottom = -10.9839
[connection signal="animation_finished" from="Effect" to="." method="_on_Effect_animation_finished"]
[connection signal="body_entered" from="Animations/Attack_Area" to="." method="_on_Attack_Area_body_entered"]
[connection signal="body_exited" from="Animations/Attack_Area" to="." method="_on_Attack_Area_body_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Area2D_body_exited"]
